--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     // ❗ Notes
     // 🧠 Try using destructuring to grab a reference to the first element of the array
     // 🧠 Try using the at method of arrays to grab the last element
-    const swapper = () => {
-
+    const swapper = arr => {
+      if(arr.length < 2){return 'No swap performed';}
+      const [first] = arr;
+      const last = arr.at(arr.length -1);
+      const copyArr = [...arr];
+      copyArr[0] = last;
+      copyArr[copyArr.length -1] = first;
+      return copyArr;
     }
 
     // 👉 CHALLENGE 2
@@ -46,7 +52,8 @@
     // 🧠 Try using the ternary operator instead of a conditional statement when deciding what to return.
     // 🧠 So instead of doing `if ('foo') return 'bar' else return 'baz'` do `return 'foo' ? 'bar' : 'baz'`
     // 🧠 The above recommendations allow to write the whole function body in just two clean lines!
-    const headAndTail = () => {
+    const headAndTail = arr => {
+      
 
     }
 
@@ -59,8 +66,11 @@
     // devGreet(false, false) // should return "Hey, I am a backend dev and I am sad"
     // ❗ Notes
     // 🧠 Use ternary expressions to construct the string.
-    const devGreet = () => {
-
+    const devGreet = (isFrontend, isHappy) => {
+      let result = '';
+      isFrontend ? result += 'Hey, I am a frontend dev ': result += 'Hey, I am a backend dev '
+      isHappy ? result += 'and I am happy': result += 'and I am sad'
+      return result;
     }
 
     // 👉 CHALLENGE 4
@@ -72,8 +82,11 @@
     // recognize({}) // should return "Hidden Person Rocks!"
     // ❗ Notes
     // 🧠 Try using destructuring to grab the name, and a return followed by a ternary expression.
-    const recognize = () => {
-
+    const recognize = obj => {
+      let {name} = obj;
+      let result = '';
+      name !== undefined ? result = `${name} Rules!`: result = `Hidden Person Rocks!`;
+      return result;
     }
 
     // 👉 CHALLENGE 5
@@ -83,8 +96,8 @@
     // processBooleans([1, 0, 0, 1, 0]) // should return ["Y", "N", "N", "Y", "N"]
     // ❗ Notes
     // 🧠 Using map, arrow function syntax, and the ternary, you can make this function a short one-liner
-    const processBooleans = () => {
-
+    const processBooleans = bools => {
+      return bools.map(i => i === 1 ? i = 'Y': i = 'N')
     }
 
     // 👉 CHALLENGE 6
@@ -97,8 +110,14 @@
     // 🧠 Split the string but do not use the reverse method of arrays. Let's do it manually.
     // 🧠 We suggest using a for loop. Research how to loop backwards over an array, starting at the last element.
     // 🧠 Use a ternary in the return statement.
-    const reverseString = () => {
-
+    const reverseString = str => {
+      let stringArray = str.split('');
+      let reversed = [];
+      for(let i = stringArray.length-1; i > -1; i--){
+        reversed.push(stringArray[i]);
+      }
+      str === reversed.join('') ? final = "It's a palindrome!": final = reversed.join('');
+      return final
     }
 
     // 👉 CHALLENGE 7
@@ -113,8 +132,8 @@
     // ❗ Notes
     // 🧠 Even though object properties have no particular order, to avoid confusing
     // the test runner, please set in each object first name, then age, and finally jsLover.
-    const zip = () => {
-
+    const zip = (arr1, arr2, arr3) => {
+      
     }
 
     // 🧪 TESTS, do not work below this line
