--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     // 🧠 So instead of doing `if ('foo') return 'bar' else return 'baz'` do `return 'foo' ? 'bar' : 'baz'`
     // 🧠 The above recommendations allow to write the whole function body in just two clean lines!
     const headAndTail = arr => {
-      
-
+      let [head, ...tail] = arr;
+      return arr.length === 0 ? 'This array is empty': [head, tail];
     }
 
     // 👉 CHALLENGE 3
